--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
+
 .con{
     width: 100%;
     height: 100vh;    
